--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Quiz App - Easy Tutorials</title>
-    <link rel="stylesheet" href="/index.html/style.css"/>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     <div class="app"> 
